--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,12 @@ dependencies {
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
   //ORMLite
   compile 'com.j256.ormlite:ormlite-android:5.0'
-
-
+  //retrieving data from the API using Retrofit
+  compile 'com.squareup.retrofit2:retrofit:2.2.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+  //show cards
+  compile 'com.android.support:cardview-v7:25.2.+'
+  compile 'com.android.support:recyclerview-v7:25.2.+'
 
   testCompile 'junit:junit:4.12'
 }
